refactoring repository collections streams